--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,7 +1,6 @@
-
 x-airflow-common: &airflow-common
   build:
-    context: ..            
+    context: ..
     dockerfile: .devcontainer/.Dockerfile
 
   environment: &airflow-common-env
@@ -15,11 +14,22 @@ x-airflow-common: &airflow-common
     AIRFLOW__CORE__TEST_CONNECTION: 'Enabled'
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
-    AIRFLOW__CORE__EXECUTION_API_SERVER_URL: 'http://airflow-apiserver:8080/execution/'
+    AIRFLOW__CORE__EXECUTION_API_SERVER_URL: 'http://airflow-webserver:8080/execution/'
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
+
+    # Webserver & Logging Configuration
+    AIRFLOW__WEBSERVER__BASE_URL: "http://localhost:8080"
+    AIRFLOW__LOGGING__BASE_LOG_FOLDER: "/opt/airflow/logs"
+    AIRFLOW__LOGGING__REMOTE_BASE_LOG_FOLDER: ""
+    AIRFLOW__LOGGING__REMOTE_LOG_CONN_ID: ""
+
     _PIP_ADDITIONAL_REQUIREMENTS: apache-airflow-providers-postgres
 
     AIRFLOW_CONFIG: '/opt/airflow/config/airflow.cfg'
+
+    # Added Postgres connection for Airflow
+    AIRFLOW_CONN_POSTGRES: postgresql+psycopg2://vscode:vscode@db:5432/airflow_db
+
   volumes:
     - ${AIRFLOW_PROJ_DIR:-..}/dags:/opt/airflow/dags
     - ${AIRFLOW_PROJ_DIR:-..}/logs:/opt/airflow/logs
@@ -40,12 +50,12 @@ services:
     env_file:
       - db.env
     ports:
-      - "5432:5432"     
+      - "5432:5432"
     volumes:
       - pg_data:/var/lib/postgresql/data
-    command: ["postgres", "-c", "listen_addresses=*"]
+    command: [ "postgres", "-c", "listen_addresses=*" ]
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
+      test: [ "CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB" ]
       interval: 3s
       timeout: 3s
       retries: 20
@@ -56,20 +66,20 @@ services:
     expose:
       - 6379
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: [ "CMD", "redis-cli", "ping" ]
       interval: 10s
       timeout: 30s
       retries: 50
       start_period: 30s
     restart: always
 
-  airflow-apiserver:
+  airflow-webserver:
     <<: *airflow-common
-    command: api-server
+    command: webserver
     ports:
       - "8080:8080"
     healthcheck:
-      test: ["CMD", "curl", "--fail", "http://localhost:8080/api/v2/version"]
+      test: [ "CMD", "curl", "--fail", "http://localhost:8080/health" ]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -84,7 +94,7 @@ services:
     <<: *airflow-common
     command: scheduler
     healthcheck:
-      test: ["CMD", "curl", "--fail", "http://localhost:8974/health"]
+      test: [ "CMD", "curl", "--fail", "http://localhost:8974/health" ]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -99,7 +109,7 @@ services:
     <<: *airflow-common
     command: dag-processor
     healthcheck:
-      test: ["CMD-SHELL", 'airflow jobs check --job-type DagProcessorJob --hostname "$${HOSTNAME}"']
+      test: [ "CMD-SHELL", 'airflow jobs check --job-type DagProcessorJob --hostname "$${HOSTNAME}"' ]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -127,7 +137,7 @@ services:
     restart: always
     depends_on:
       <<: *airflow-common-depends-on
-      airflow-apiserver:
+      airflow-webserver:
         condition: service_healthy
       airflow-init:
         condition: service_completed_successfully
@@ -136,7 +146,7 @@ services:
     <<: *airflow-common
     command: triggerer
     healthcheck:
-      test: ["CMD-SHELL", 'airflow jobs check --job-type TriggererJob --hostname "$${HOSTNAME}"']
+      test: [ "CMD-SHELL", 'airflow jobs check --job-type TriggererJob --hostname "$${HOSTNAME}"' ]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -179,22 +189,22 @@ services:
 
   airflow-cli:
     <<: *airflow-common
-    profiles: [debug]
+    profiles: [ debug ]
     environment:
       <<: *airflow-common-env
       CONNECTION_CHECK_MAX_COUNT: "0"
-    command: ["bash", "-c", "airflow"]
+    command: [ "bash", "-c", "airflow" ]
     depends_on:
       <<: *airflow-common-depends-on
 
   flower:
     <<: *airflow-common
     command: celery flower
-    profiles: [flower]
+    profiles: [ flower ]
     ports:
       - "5555:5555"
     healthcheck:
-      test: ["CMD", "curl", "--fail", "http://localhost:5555/"]
+      test: [ "CMD", "curl", "--fail", "http://localhost:5555/" ]
     restart: always
     depends_on:
       <<: *airflow-common-depends-on
