--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,12 +1,12 @@
+version: "3.9"
+
 x-airflow-common: &airflow-common
   build:
-    context: ..
+    context: ..            
     dockerfile: .devcontainer/.Dockerfile
-
   environment: &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
     AIRFLOW__CORE__AUTH_MANAGER: airflow.providers.fab.auth_manager.fab_auth_manager.FabAuthManager
-
     AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://vscode:vscode@db:5432/airflow_db
     AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://vscode:vscode@db:5432/airflow_db
     AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
@@ -14,29 +14,17 @@ x-airflow-common: &airflow-common
     AIRFLOW__CORE__TEST_CONNECTION: 'Enabled'
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
-    AIRFLOW__CORE__EXECUTION_API_SERVER_URL: 'http://airflow-webserver:8080/execution/'
+    AIRFLOW__CORE__EXECUTION_API_SERVER_URL: 'http://airflow-apiserver:8080/execution/'
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
-
-    # Webserver & Logging Configuration
-    AIRFLOW__WEBSERVER__BASE_URL: "http://localhost:8080"
-    AIRFLOW__LOGGING__BASE_LOG_FOLDER: "/opt/airflow/logs"
-    AIRFLOW__LOGGING__REMOTE_BASE_LOG_FOLDER: ""
-    AIRFLOW__LOGGING__REMOTE_LOG_CONN_ID: ""
-
     _PIP_ADDITIONAL_REQUIREMENTS: apache-airflow-providers-postgres
-
+    AIRFLOW_CONN_POSTGRES: 'postgresql://vscode:vscode@db:5432/airflow_db'
     AIRFLOW_CONFIG: '/opt/airflow/config/airflow.cfg'
-
-    # Added Postgres connection for Airflow
-    AIRFLOW_CONN_POSTGRES: postgresql+psycopg2://vscode:vscode@db:5432/airflow_db
-
   volumes:
     - ${AIRFLOW_PROJ_DIR:-..}/dags:/opt/airflow/dags
     - ${AIRFLOW_PROJ_DIR:-..}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-..}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-..}/plugins:/opt/airflow/plugins
     - ${AIRFLOW_PROJ_DIR:-..}/data:/opt/airflow/data
-
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on: &airflow-common-depends-on
     redis:
@@ -47,15 +35,17 @@ x-airflow-common: &airflow-common
 services:
   db:
     image: postgres:16
-    env_file:
-      - db.env
+    environment:
+      POSTGRES_USER: vscode
+      POSTGRES_PASSWORD: vscode
+      POSTGRES_DB: airflow_db
     ports:
-      - "5432:5432"
+      - "5432:5432"     
     volumes:
       - pg_data:/var/lib/postgresql/data
-    command: [ "postgres", "-c", "listen_addresses=*" ]
+    command: ["postgres", "-c", "listen_addresses=*"]
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB" ]
+      test: ["CMD-SHELL", "pg_isready -U vscode -d airflow_db"]
       interval: 3s
       timeout: 3s
       retries: 20
@@ -66,20 +56,20 @@ services:
     expose:
       - 6379
     healthcheck:
-      test: [ "CMD", "redis-cli", "ping" ]
+      test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 30s
       retries: 50
       start_period: 30s
     restart: always
 
-  airflow-webserver:
+  airflow-apiserver:
     <<: *airflow-common
-    command: webserver
+    command: api-server
     ports:
       - "8080:8080"
     healthcheck:
-      test: [ "CMD", "curl", "--fail", "http://localhost:8080/health" ]
+      test: ["CMD", "curl", "--fail", "http://localhost:8080/api/v2/version"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -94,7 +84,7 @@ services:
     <<: *airflow-common
     command: scheduler
     healthcheck:
-      test: [ "CMD", "curl", "--fail", "http://localhost:8974/health" ]
+      test: ["CMD", "curl", "--fail", "http://localhost:8974/health"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -109,7 +99,7 @@ services:
     <<: *airflow-common
     command: dag-processor
     healthcheck:
-      test: [ "CMD-SHELL", 'airflow jobs check --job-type DagProcessorJob --hostname "$${HOSTNAME}"' ]
+      test: ["CMD-SHELL", 'airflow jobs check --job-type DagProcessorJob --hostname "$${HOSTNAME}"']
       interval: 30s
       timeout: 10s
       retries: 5
@@ -137,7 +127,7 @@ services:
     restart: always
     depends_on:
       <<: *airflow-common-depends-on
-      airflow-webserver:
+      airflow-apiserver:
         condition: service_healthy
       airflow-init:
         condition: service_completed_successfully
@@ -146,7 +136,7 @@ services:
     <<: *airflow-common
     command: triggerer
     healthcheck:
-      test: [ "CMD-SHELL", 'airflow jobs check --job-type TriggererJob --hostname "$${HOSTNAME}"' ]
+      test: ["CMD-SHELL", 'airflow jobs check --job-type TriggererJob --hostname "$${HOSTNAME}"']
       interval: 30s
       timeout: 10s
       retries: 5
@@ -170,12 +160,11 @@ services:
         /entrypoint airflow version
         /entrypoint airflow config list >/dev/null
         chown -R "${AIRFLOW_UID}:0" /opt/airflow/
-        # Auto-init DB and create admin user
         /entrypoint airflow db upgrade
         /entrypoint airflow users create \
           --username $${_AIRFLOW_WWW_USER_USERNAME:-airflow} \
           --password $${_AIRFLOW_WWW_USER_PASSWORD:-airflow} \
-          --firstname Admin --lastname User --role Admin --email admin@example.com
+          --firstname Admin --lastname User --role Admin --email admin@example.com || true
     environment:
       <<: *airflow-common-env
       _AIRFLOW_DB_MIGRATE: 'true'
@@ -184,27 +173,34 @@ services:
       _AIRFLOW_WWW_USER_PASSWORD: ${_AIRFLOW_WWW_USER_PASSWORD:-airflow}
       _PIP_ADDITIONAL_REQUIREMENTS: ''
     user: "0:0"
+    restart: "no"
     depends_on:
       <<: *airflow-common-depends-on
 
   airflow-cli:
     <<: *airflow-common
-    profiles: [ debug ]
+    profiles:
+      - debug
     environment:
       <<: *airflow-common-env
       CONNECTION_CHECK_MAX_COUNT: "0"
-    command: [ "bash", "-c", "airflow" ]
-    depends_on:
-      <<: *airflow-common-depends-on
+    command:
+      - bash
+      - -c
+      - airflow
 
   flower:
     <<: *airflow-common
     command: celery flower
-    profiles: [ flower ]
+    profiles:
+      - flower
     ports:
       - "5555:5555"
     healthcheck:
-      test: [ "CMD", "curl", "--fail", "http://localhost:5555/" ]
+      test: ["CMD", "curl", "--fail", "http://localhost:5555/"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
     restart: always
     depends_on:
       <<: *airflow-common-depends-on
